# stratum

./: .devenv.flake.nix  .gitignore  .gitmodules  IROH_QUICKSTART.md  iroh-pool-config.toml  iroh-translator-config.toml  justfile  mining-device-iroh-secret.key  pool-iroh-secret.key  run-iroh-mining-device.sh
.devenv/: nix-eval-cache.db
.kiro/specs/ehash-http-api/: design.md  requirements.md  tasks.md
.kiro/specs/hashpool-ehash-mint/: design.md  requirements.md  tasks.md
.kiro/specs/interactive-ehash-tutorial/: design.md  requirements.md  tasks.md
.kiro/specs/iroh-network-integration/: design.md  implementation-plan.md  phase2-todos.md  tasks.md
.kiro/specs/structured-logging-framework/: design.md  requirements.md
common/: Cargo.toml
common/ehash/: Cargo.toml
common/ehash/src/: config.rs  error.rs  hpub.rs  lib.rs  mint.rs  types.rs  wallet.rs  work.rs
protocols/: Cargo.toml
protocols/stratum-translation/src/: sv1_to_sv2.rs
protocols/v1/src/methods/: client_to_server.rs
protocols/v2/binary-sv2/src/: lib.rs
protocols/v2/binary-sv2/src/codec/: decodable.rs  encodable.rs  impls.rs
protocols/v2/binary-sv2/src/datatypes/: mod.rs
protocols/v2/binary-sv2/src/datatypes/non_copy_data_types/: mod.rs
protocols/v2/const-sv2/src/: lib.rs
protocols/v2/handlers-sv2/src/: mining.rs
protocols/v2/parsers-sv2/src/: lib.rs
protocols/v2/roles-logic-sv2/: Cargo.toml
protocols/v2/roles-logic-sv2/src/: parsers.rs
protocols/v2/roles-logic-sv2/src/channel_logic/: channel_factory.rs
protocols/v2/subprotocols/common-messages/src/: setup_connection.rs
protocols/v2/subprotocols/mining/: Cargo.toml
protocols/v2/subprotocols/mining/src/: lib.rs  open_channel.rs  submit_shares.rs
roles/: Cargo.toml  pool-iroh-secret.key
roles/jd-client/: Cargo.toml
roles/jd-client/config-examples/: jdc-config-local-ehash-mint-example.toml  jdc-config-local-ehash-wallet-example.toml
roles/jd-client/src/lib/: config.rs  downstream.rs  error.rs  mod.rs
roles/jd-client/src/lib/channel_manager/: downstream_message_handler.rs  mod.rs
roles/jd-client/src/lib/job_declarator/: mod.rs
roles/jd-client/src/lib/template_receiver/: mod.rs
roles/jd-client/src/lib/upstream/: mod.rs
roles/jd-client/src/lib/upstream_sv2/: upstream.rs
roles/mining-proxy/src/lib/: upstream_mining.rs
roles/pool/: Cargo.toml
roles/pool/config-examples/: pool-config-iroh-example.toml  pool-config-local-tp-with-ehash-example.toml
roles/pool/src/lib/: config.rs  iroh_helpers.rs  mod.rs
roles/pool/src/lib/channel_manager/: mining_message_handler.rs  mod.rs
roles/pool/src/lib/mining_pool/: iroh_handler.rs  message_handler.rs  mod.rs
roles/pool/tests/: config_test.rs
roles/roles-utils/network-helpers/: Cargo.toml
roles/roles-utils/network-helpers/src/: iroh_connection.rs  lib.rs  noise_connection.rs  noise_stream.rs
roles/storage/: Cargo.toml  README.md
roles/storage/examples/: README.md  backend_comparison.rs  memory_backend.rs  mock_data.rs  sqlite_backend.rs
roles/storage/src/: main.rs
roles/storage/src/lib/: error.rs  mod.rs  service.rs  share_accounting_storage.rs  types.rs
roles/storage/src/lib/backends/: memory.rs  mod.rs  sqlite.rs
roles/test-utils/mining-device/: Cargo.toml
roles/test-utils/mining-device/src/: main.rs
roles/test-utils/mining-device/src/lib/: mod.rs
roles/translator/: Cargo.toml
roles/translator/.tours/: mpsc-in-sri.tour
roles/translator/config-examples/: tproxy-config-iroh-example.toml  tproxy-config-local-pool-with-ehash-example.toml
roles/translator/src/: main.rs
roles/translator/src/lib/: config.rs  error.rs  mod.rs  utils.rs
roles/translator/src/lib/proxy/: bridge.rs
roles/translator/src/lib/sv1/downstream/: data.rs  downstream.rs  message_handler.rs  mod.rs
roles/translator/src/lib/sv1/sv1_server/: difficulty_manager.rs  sv1_server.rs
roles/translator/src/lib/sv2/channel_manager/: channel_manager.rs  data.rs  message_handler.rs
roles/translator/src/lib/sv2/upstream/: message_handler.rs  upstream.rs
roles/translator/src/lib/upstream_sv2/: upstream.rs
roles/translator/tests/: config_test.rs
stratum-core/: Cargo.toml
stratum-core/src/: lib.rs
sv2/channels-sv2/: Cargo.toml
sv2/channels-sv2/src/: chain_tip.rs  lib.rs
sv2/handlers-sv2/: Cargo.toml
sv2/handlers-sv2/src/: lib.rs
sv2/parsers-sv2/: Cargo.toml
sv2/parsers-sv2/src/: lib.rs
test-utils/ehash-tutorial/: Cargo.toml  README.md  TESTING.md
test-utils/ehash-tutorial/src/: chapters.rs  commands.rs  config_gen.rs  main.rs  process.rs  state.rs
test-utils/ehashimint/: Cargo.toml  README.md  pool-example.toml
test-utils/ehashimint/src/: cli.rs  config.rs  lib.rs  main.rs  process.rs
test-utils/ehashimint/src/scenarios/: jdc_pool.rs  mod.rs  tproxy_jdc.rs  tproxy_pool.rs
test-utils/ehashimint/test-configs/: pool.toml
test-utils/ehashimint/test-wallet/: cdk-cli.sqlite  seed
