[package]
name = "handlers_sv2"
version = "0.2.2"
authors = ["The Stratum V2 Developers"]
edition = "2021"
readme = "README.md"
description = "Sv2 Message handlers"
documentation = "https://docs.rs/handlers_sv2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stratum-mining/stratum"
homepage = "https://stratumprotocol.org"
keywords = ["stratum", "mining", "bitcoin", "protocol"]

[features]
default = ["mining", "job_declaration", "template_distribution"]
mining = ["dep:mining_sv2", "parsers_sv2/mining"]
job_declaration = ["dep:job_declaration_sv2", "parsers_sv2/job_declaration"]
template_distribution = ["dep:template_distribution_sv2", "parsers_sv2/template_distribution"]

[dependencies]
parsers_sv2 = { path = "../parsers-sv2", version = "^0.2.0", default-features = false }
binary_sv2 = { path = "../binary-sv2", version = "^5.0.0" }
common_messages_sv2 = { path = "../subprotocols/common-messages", version = "^7.0.0" }
framing_sv2 = { path = "../framing-sv2", version = "^6.0.0" }
mining_sv2 = { path = "../subprotocols/mining", version = "^7.0.0", optional = true }
template_distribution_sv2 = { path = "../subprotocols/template-distribution", version = "^5.0.0", optional = true }
job_declaration_sv2 = { path = "../subprotocols/job-declaration", version = "^6.0.0", optional = true }
extensions_sv2 = { path = "../extensions-sv2", version = "^0.1.0" }
trait-variant = { workspace = true }