[package]
name = "ehash-tutorial"
version = "0.1.0"
edition = "2021"
description = "Interactive eHash tutorial with guided CLI commands"
license = "MIT OR Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
tui-input = "0.11"
clap = { version = "4.5", features = ["derive"] }
