[package]
name = "ehashimint"
version = "0.1.0"
edition = "2021"
description = "ehashimint is a library and CLI for setting up local eHash testing environments"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ehashimint"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.41", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
nix = { version = "0.29", features = ["signal"] }
rand = "0.8"
which = "6.0"

[dev-dependencies]
tempfile = "3.8"
